<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.quizapp.geograquestions">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DispName"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answersgrp"
        android:layout_centerVertical="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:checked="false"
            android:text="@string/option"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:text="@string/option" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:text="@string/option" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:checked="false"
            android:text="@string/option" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UrmatoareaIntrebare"
        android:id="@+id/button3"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/answersgrp"
        android:layout_alignParentEnd="true"
        android:background="#808000"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:id="@+id/buttonquit"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentEnd="true"
        android:background="#800000"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Intrebari"
        android:id="@+id/tvque"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/answersgrp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/Scor"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:id="@+id/textView4"
        android:text="@string/scorzero"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="19sp" />

</RelativeLayout>
