<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.quizapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="48dp"
        android:textSize="40sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <Button
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:text="@string/joaca"
        android:id="@+id/button"
        android:textSize="30sp"
        android:layout_below="@id/editName"
        android:layout_alignStart="@+id/editName"
        android:layout_marginBottom="25dp"
        android:background="#808000"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editName"
        android:textColor="#000000"
        android:hint="@string/hint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
